--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -1,3 +1,11 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+}
+
 .game {
     display: flex;
     align-items: center;
